add_subdirectory ("application")
add_subdirectory ("assets")
add_subdirectory ("button")
add_subdirectory ("closed-bounded-polyline")
add_subdirectory ("grid")
add_subdirectory ("indicator")
add_subdirectory ("label")
add_subdirectory ("text")
add_subdirectory ("player")
add_subdirectory ("points")
